add HireLog project

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -217,7 +217,7 @@
                       class="projects__img"
                     />
                     <a
-                      href="https://studynotion-edtech-frontend-gamma.vercel.app/"
+                      href="https://studynotion-edtech-platform-phi.vercel.app/"
                       target="_blank"
                       rel="noopener noreferrer"
                       class="projects__button"
@@ -237,16 +237,12 @@
 
                 <div class="projects__data">
                   <h1 class="projects__title">
-                    Film-Fusion - <span> Movie Search Platform</span>
+                    HireLog - <span> Job applications manager </span>
                   </h1>
                   <p class="projects__subtitle">Technologies used</p>
                   <p class="projects__description">
-                    <strong>Frontend: </strong>HTML, CSS, JavaScript
+                    <strong>Frontend: </strong>Reactjs and tailwind css
                   </p>
-                  <p class="projects__description">
-                    <strong>API : </strong>The Movie Database (TMDb) API
-                  </p>
-
                   <div class="projects__image">
                     <img
                       src="assets/images/projects-2.png"
@@ -254,7 +250,7 @@
                       class="projects__img"
                     />
                     <a
-                      href="https://film-fusion-app.vercel.app/"
+                      href="https://hirelog.netlify.app/"
                       target="_blank"
                       rel="noopener noreferrer"
                       class="projects__button"
